# kmerPaPa

./: .gitignore  LICENSE  Makefile  README.md  do_stuff.sh  duties.py  mkdocs.yml  pyproject.toml
config/: coverage.ini
docs/reference/: cli.md
scripts/: setup.sh
src/: compare.rs  counts.rs  enumerate.rs  main.rs  observed.rs
src/kmerpapa/: CV_tools.py  __init__.py  __main__.py  cli.py  io_utils.py  new_utils.py  papa.py  pattern_utils.py  score_utils.py
src/kmerpapa/algorithms/: all_kmers_CV.py  base.py  bottum_up_array_penalty_plus_pseudo.py  bottum_up_array_penalty_plus_pseudo_CV.py  bottum_up_array_w_numba.py  greedy_penalty_plus_pseudo.py  multi_class_CV.py
test_data/: background_5mers.txt  background_7mers.txt  joint_5mers.txt  joint_7mers.txt  mutated_5mers.txt  mutated_7mers.txt  pairwise_30_joint_5mers.txt  pairwise_3_joint_5mers.txt  pairwise_joint_5mers.txt
tests/: __init__.py  test_CV_tools.py  test_algorithms.py  test_cli.py  test_io_utils.py  test_pattern_utils.py
