[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kmerpapa"
version = "0.2.0"
description = "Tool to calculate a k-mer pattern partition from position specific k-mer counts."
authors = ["Søren Besenbacher <besenbacher@clin.au.dk>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/besenbacher/kmerpapa"
homepage = "https://github.com/besenbacher/kmerpapa"
keywords = []
packages = [ { include = "kmerpapa", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.17,<1.21"
scipy = "^1.7.1"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"

# tasks
duty = "^0.6.0"
git-changelog = "^0.4.2"
httpx = "^0.16.1"
jinja2-cli = "^0.7.0"
toml = "^0.10.2"

# docs
mkdocs = "^1.1.2"
mkdocs-coverage = "^0.2.1"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.15.0"

[tool.poetry.scripts]
kmerpapa = "kmerpapa.cli:main"

[tool.black]
line-length = 120
exclude = "tests/fixtures"

